fix browser compatibility problems : icon vertical align on ff, and justify content on edge

--- a/front/src/components/CreateCharacter/style.scss
+++ b/front/src/components/CreateCharacter/style.scss
@@ -78,7 +78,7 @@
     height: 1.2em;
     border-radius: 50%;
     justify-content: center;
-    border: none;
+    border: 1px solid transparent;
     line-height: 100%;
   }
 
